# ros_zhen

./: .gitignore  README.md
src/dmp_cpp/: CMakeLists.txt  CMakeLists.txt~  dmp_cpp.kdev4  package.xml  package.xml~
src/dmp_cpp/.kdev4/: dmp_cpp.kdev4
src/dmp_cpp/include/: dmp.h
src/dmp_cpp/src/: dmp.cpp
src/dmp_cpp/src/tools/: dmp_example.cpp  dmp_recorder.cpp  read_matrix.cpp
src/pi2_cpp/: CMakeLists.txt  package.xml
src/pi2_cpp/include/: pi2.h
src/pi2_cpp/src/: pi2.cpp  pi2_kinesthetic.cpp
src/pi2_cpp/src/tools/: pi2_baxter.cpp  pi2_example.cpp  set_speed_ratio.cpp  specify_timeout.cpp
src/table_object/: .cproject  .project  CMakeLists.txt  package.xml
src/table_object/include/table_object/: bottle_feature.h  detect_touch.h  detect_touchRequest.h  detect_touchResponse.h  detect_touch_update.h  detect_touch_updateRequest.h  detect_touch_updateResponse.h  featureDef.h  miniBall.hpp  palm_reflex.h  palm_reflexRequest.h  palm_reflexResponse.h  palm_reflex_triggered.h  record_feature.h  record_featureRequest.h  record_featureResponse.h  table_obj_exp.h
src/table_object/launch/: baxter_kinect_link.launch  baxter_kinect_link_correct.launch  experiment.launch  experiment_wo.launch  kinect_world_link.launch  readme.txt
src/table_object/msg/: bottle_feature.msg  palm_reflex_triggered.msg
src/table_object/src/: .kdev_include_paths  .search_action.cpp.kate-swp  action_learning.cpp  action_learning_s0_s1.cpp  action_learning_s1_s2.cpp  action_learning_update.cpp  align_bottle.cpp  alignment_prerejective.cpp  close_gripper.cpp  cylinder_block_tracking.cpp  example_normal_estimation.cpp  feature_extraction.cpp  genCubeSnippet.cpp  icp.cpp  inv_palm_reflex_server.cpp  learn_action.cpp  my_server_test_stable.cpp  my_tf_broadcaster.cpp  my_tf_listener.cpp  octree_change_detection.cpp  palm_reflex_server.cpp  pcl_visualization_demo.cpp  rand_action.cpp  record_feature_client.cpp  record_feature_server.cpp  robot_block_tracking.cpp  robot_scene_tracking.cpp  save_cluster.cpp  table_bottle_publisher.cpp  table_bottle_publisher_v0.cpp  table_obj_exp.cpp  testExp.cpp  test_learning.cpp  threadVisualizerSnippet.cpp  touch_detector_client.cpp  touch_detector_server.cpp  touch_detector_server_update.cpp  tracking_sample.cpp
src/table_object/srv/: detect_touch.srv  detect_touch_update.srv  palm_reflex.srv  record_feature.srv
